main.css
/* ... */
.devices__head--menu {
    display: flex;
    align-items: baseline;
}

.paginator-container {
    display: flex;
    width: 45px;
    justify-content: flex-end;
}

.paginator-button {
    width: 15px;
    height: 16px;
    border: none;
    outline: none;
    background: url('guide/assets/Icons/Arrow_Right/M-Copy@2x.png') no-repeat ;
    background-size: contain;
}

.paginator-button:disabled {
    filter: opacity(0.4);
}

.paginator--forward {
    transform: rotate(180deg);
}

.floor-modal__input-container {
    display: flex;
    justify-content: center;
}

.floor-menu-section__item--range {
    display: none;
}

.floor-modal--output {
    position: relative;
    height: 221px;
    width: 221px;
    background: url("guide/assets/background@1x.svg") no-repeat;
    background-size: 185px 185px;
    margin: 0;
    display: flex;
    justify-content: center;
    align-items: center;
    background-position: center;
    z-index: 50;
}

.floor-modal--output::before {
    content: "";
    position: absolute;
    width: 100%;
    height: 100%;
    background: url(guide/assets/Oval@1x.svg) no-repeat;
    transform: rotate(-65deg);
    z-index: 5;
}

.floor-modal--output::after {
    content: "";
    position: absolute;
    width: 100%;
    height: 100%;
    background: url(guide/assets/Oval\ Copy@1x.svg) no-repeat;
    left: 143px;
    top: 70px;
    transform: rotate(-19deg);
    z-index: 6;
    pointer-events: none;
}

.floor-output--text {
    z-index: 10;
}

@media screen and (min-width: 1420px) {
    .selected-list {
        grid-auto-flow: row;
        }
}

@media screen and (max-width: 768px) {
    .main {
        grid-template-columns: repeat(auto-fit, minmax(335px, 632px));
    }

    .scheduled-list {
        grid-auto-flow: column;
        overflow: scroll;
    }

    .selected-list {
        grid-template-rows: 106px;
        grid-auto-flow: column;
        overflow: scroll;
    }

    .devices-list {
        overflow: scroll;
    }

    .paginator-container {
        display: none;
    }
    
}

@media screen and (max-width: 705px) {
    body {
        padding: 0 var(--padding-small);
    }

    .header {
        height: 64px;
        justify-content: space-between;
        padding: 12px 0px;
        margin-bottom: 13px;
        border: none;
    }

    .header-menu-container {
        height: 40px;
        display: flex;
        flex-direction: row-reverse;
        justify-content: center;
        align-items: center;
    }

    .header-menu {
        z-index: 10;
    }

    .header__menu-link {
        font-size: var(--text-medium);
    }

    .header-menu--hidden {
        display: none;
    }

    .header-menu__icon {
        display: block;
        margin-left: 8px;
    }

    .header-menu__item {
        display: block;
        transform: translateX(0);
        transition: transform 1s;
        margin-left: 0 !important;       
    }

    .header-menu__item:hover {
        transform: translateX(-12px);
    }

    .header-menu__item + .header-menu__item {
        margin-top: 4px;        
    }

    .section-main__container {
        margin-top: 0;
    }

    .section-main__title {
        display: none;
    }

    .section-main__info-greeting {
        font-size: var(--text-big);
    }

    .section-main__info-general {
        font-size: var(--text-small);
    }

    .section-main__info-temp--text {
        font-size: var(--text-small);
    }

    .with-icon::after {
        width: 18px;
        height: 18px;
    }

    .text--output {
        font-size: 24px;
    }

    .footer__links {
        justify-content: flex-start;
        flex-wrap: wrap;
    }

    .footer__link {
        margin-right: 16px;
    }

    .devices-section__menu-container{
        z-index: 1;
    }

    .devices-section__menu {
        flex-direction: column;
        overflow: hidden;
        height: 30px;
        transition: transform 1s;
        transform: scale(0.9)
    }

    .devices-section__menu--hidden {
        overflow: visible;
        transition: transform 1s;
        transform: scale(1)
    }

    .devices-menu--mobile__icon {
        display: inline-block;
        height: 12px;
        transform: rotate(-90deg);
        vertical-align: middle;
        margin-left: 16px;
        filter: brightness(0);
    }

    .devices-menu-item__label {
        background-color: rgb(248, 232, 167);
        
    }
    .devices-section-menu__item {
        order: 2;
    }

    .devices-section-menu__item :checked {
        order: 1;
    }

    .devices-menu-item__label:not(:nth-child(2)) {
        margin-top: 3px;
    }

    /* .devices-section__menu--mobile {
        display: inline;
        font-size: 13px;
        padding: 8px 15px;
        background: #FFD93E;
        border: none;
        border-radius: 20px;
        margin-bottom: 20px;
        -webkit-appearance: none;
        -moz-appearance: none;
    } */

    .modal-container {
        grid-template-columns: 334px;
        grid-gap: 15px;
    }

    .modal__main {
        padding: 20px;
    }

    .modal__data {
        display: none;
    }

    .modal__main--state-text {
        font-size: var(--text-small);
        color: var(--text-dark);
    }

    .modal__menu{
        overflow: scroll;
        width: 314px;
    }
    .modal-settings-menu-text {
        font-family: ArialMT;
    }

    .modal__main--range-slider {
        height: 336px;
    }  

    .menu-section__item--range {
        width: 336px;
        transform: rotate(270deg) translate(-135px, -20px);
    }

    .range__extremes {
        flex-direction: column-reverse;
        top: 15px;
        bottom: 18px;
        left: 133px;
        right: 0;
        transform: none;
    }

    .light-range__extremes {
        top: 10px;
        bottom: 13px;
        left: 130px;
    }
}

